#19667. Gradle task for bundling Java 7 compatible OS X distributions using Oracle's appbundler tool.